--- a/snake-game/style.css
+++ b/snake-game/style.css
@@ -24,7 +24,7 @@
         padding: 0;
         background-color: azure;
     }
-    footer{
+/*     footer{
         color: rgb(255, 55, 0);
         bottom: 0;
         left: 0;
@@ -40,3 +40,4 @@
         font-size: 30px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
+ */
