--- a/snake-game/style.css
+++ b/snake-game/style.css
@@ -24,7 +24,7 @@
         padding: 0;
         background-color: azure;
     }
-/*     footer{
+    footer{
         color: rgb(255, 55, 0);
         bottom: 0;
         left: 0;
@@ -32,12 +32,12 @@
         position: absolute;
         padding: auto;
         display: block;
-        font-size: 30px;
+        font-size: 10px;
         text-align: center;
-        background-color: 7fffd4;
+/*         background-color: 7fffd4; */
         padding: 20px;
         color: blueviolet;
         font-size: 30px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
- */
+
