--- a/todolist/style.css
+++ b/todolist/style.css
@@ -7,15 +7,15 @@ body {
     justify-content: center;
     align-items: center;
     color: hsl(198, 1%, 29%);
-    font-family: "Architects Daughter", cursive;
+    font-family: "Architects Daughter";
     text-align: center;
     font-size: 130%;
   }
   .container {
-    width: 100%;
+    width: auto;
     height: auto;
     min-height: 500px;
-    max-width: 300px;
+    max-width: 700px;
     min-width: 250px;
     background: #f1f5f8;
     background-image: radial-gradient(#bfc0c1 7.2%, transparent 0);
@@ -26,20 +26,18 @@ body {
     box-sizing: border-box;
     border:2px solid black;
   }
-  .heading {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 1rem;
-  }
-  .heading h1 {
+h1 {
     transform: rotate(2deg);
     padding: 0.2rem 1.2rem;
     border-radius: 20% 5% 20% 5%/5% 20% 25% 20%;
     background-color: #fdcb6e;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem; */
   }
-  #inputField {
+  #inp{
     box-sizing: border-box;
     background-color: transparent;
     padding: 0.7rem;
@@ -47,16 +45,15 @@ body {
     border-bottom-left-radius: 3px 15px;
     border: solid 3px transparent;
     border-bottom: dashed 3px #fdcb6e;
-    font-family: "Architects Daughter", cursive;
-    font-size: 1rem;
-    color: hsla(260, 2%, 25%, 0.7);
+    font-family: "Architects Daughter";
+    font-size: 1.5rem;
+    color: black;
     width: 70%;
     margin-bottom: 20px;
   }
-  #addToDo {
+  #push {
     padding: 0;
-    border: none;
-    font-family: "Architects Daughter", cursive;
+    font-family: "Architects Daughter";
     text-decoration: none;
     padding-bottom: 3px;
     border-radius: 5px;
@@ -64,18 +61,59 @@ body {
     border: 2px solid green;
     padding:10px;
     margin-left:10px;
+    font-weight: bold;
+    font-size: 20px;
   }
-  
   h1{
     top:0;
     position: absolute;
   }
-  .paragraph-styling {
-    margin: 0;
+#ss{
+  width:15%;
+  margin-left:5px;
+  padding-left:5px;
+  /* margin-top: 0; */
+  /* top:0; */
+  /* padding-top: 0; */
+  height:26px;
+  align-items: center;
+  text-align: center;
+
+  
+}
+#ss:checked + span{
+    text-decoration:line-through
+  }
+#taskname{
+margin-right: 40px;
+line-height: 1.5;
+}
+#task{
+    /* text-align: left; */
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    margin-right: 2px;
+    margin-bottom: 15px;
+}
+#task button{
+    background-color: #ffeaa7;
+    border: 2px solid rgb(73, 198, 73);
+    border-radius: 5px;
+    color: #0c0b0b;
+    height: 7%;
+    width: 40px;
     cursor: pointer;
-    font-size: 20px;
-    list-style-type: square; 
-    text-align: left;
-    margin-left: 10px;
-    margin-bottom: 10px;
+    padding:10px;
+    margin-left:10px;
+    /* outline: none; */
+    /* justify-content: right; */
+    position: absolute;
+    right: 0;
+    text-align: right;
+    padding-bottom: 23px;
+}
+
+.completed{
+    text-decoration: line-through;
 }
